fix: add px to gap styles

--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,11 @@ html {
 }
 
 .gap-4 {
-  gap: 4;
+  gap: 4px; /* Add 'px' */
 }
 
 .gap-8 {
-  gap: 8;
+  gap: 8px; /* Add 'px' */
 }
 
 .bg-grey-1 {
